[UTF-8][Japanese]

*Ver3.0RC1 : 2015/xx/xx

-[bf:フッターの出力位置を変更しました]。
-FrontPage（固定トップページ）の時、記事タイトルをヘッダ出力しないように変更しました。
-システムモード非対応テーマを管理画面で使用しようとする時、警告を表示するようにした。
-表示パスワード機能やメンテナンスモードでの画面に、適切なHTTPステータスコードを設定した。
-スマホ判別に、BlackBerry と Windows Phone を加えました。
-コメント表示数の設定項目がなかったので修正。
-FrontPageのタイトル設定機能を追加。
-【design】全体の背景画像を設定できるように変更。
-【design】ヘッダ用の「ブログの説明」プラグインを追加。
-【記法】HTML5準拠のためtable記法のsummary指定を無効にしました。
-【fix】ヘッダ部のmargin/padding設定が有効ではなかった。
-【fix】コンテンツリスト等多重配置可能なモジュールがあったとき、プラグイン再インストールでエラーが起きることがある。
-【fix】des_system-info のコメントの文字コードが間違っていた。
-【fix】印刷用表示で FrontPage 機能が動作していなかった。
-【fix】印刷用テーマ satsuki2/_print においてデザイン編集の設定を解除していなかった。
-【fix】ヘッダのタイトル文字位置がブログ表示時とデザイン編集時で異なる。
-【fix】Version1からデータ移行時に、サムネイルディレクトリがうまく移行されない不具合を修正。
-他

*Ver3.0β5 : 2015/05/02

-スマホ表示に対応しました。USER_AGENTで判別しています。((管理画面の細かいチューニングは別として、とりあえず読むには困らないと思います。))
-記事メイン部とコメント欄のデザイン編集機能を付けました。((これに伴いメイン部のデザインは再設定してください。))
-それに伴い基本設定→表示設定がなくなりました。
-[http://adiary.org/ver2to3.html:Version2 からの移行機能]が付きました。
-theme/ ディレクトリ以下にテーマやテンプレートに無関係なものが増えてきたので、それらを pub-dist/ に移動しました。
-テーマの色変更機能で「設定できる色が多すぎる」問題に対処するため、色をいくつかの基本色に連動させて動かす機能を付けました。
-表示パスワード機能を付けました。ブログの表示にパスワードをかける機能です。
-プライベートブログ時に「秘密のパスワード」を入力することでブログを表示できる機能を追加。
-システム管理にメンテナンスモードを実装しました。
-【記法】目次記法の機能を拡張し、出力階層を選択できるようにしました（{{[*toc0] [*toc2]}}の追加）。
-【design】タイトル文字の表示位置調整が非常に分かりにくかったので設定方法を見直しました。
-【design】ヘッダとメイン部用の検索ボックスモジュールを用意しました。
-【design】サイドバー検索ボックスのHTML形式を変更しました。（雑多なidを削除しました）
-【design】module_id の仕様を変更しました（β3の時の仕様に戻しました）。
-【fix】プライベートモードを解除したとき、公開ディレクトリが複雑な名前のままになっている。
-【fix】「ブログとwikiコンテンツ等を分離して扱う」にチェックを入れるとコンテンツページが検索にヒットしない。（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
-【fix】theme/以下のテンプレート読み込み機能がうまく動作していなかった。なおVer3の[bf:テンプレートディレクトリ名は _skel/ です]（[http://adiary.blog.abk.nu/0358#c655:Thanks to 手石]）
-【fix】シンタックスハイライトがうまく動作しない。
-【fix】【plugin】プライベートブログ切替時に、デザインモジュールで使用していた背景画像が表示できなくなる。
-【fix】【アルバム】大文字の拡張子（.JPG等）を画像ファイルと識別できない。
-【fix】【Compiler】{{<@ifcall(cond, 'file')>}} 等で cond が false のとき、condの値が出力されてしまう。

*Ver3.0β4 : 2015/03/05
