@@ -12,6 +12,12 @@
 	art_pkey:min  =   1
 
 	no_centering  = flag
+
+	sp_menu = スマホ表示時のメニュー名
+	sp_menu:max_chars = 48
+	sp_menu:filter0   = trim
+	sp_menu:filter1   = tag
+
 <$end>
 
 
