@@ -17,14 +17,15 @@
 		<li><a href="<@v.myself>?<@v.skel_dir>edit">デザイン編集</a></li>
 		<li><a href="<@v.myself>?<@v.skel_dir>reset">デザインの初期化</a></li>
 		<li><a href="<@v.myself>?<@v.skel_dir>usercss">ユーザーCSS</a></li>
-		<li><a href="<@v.myself>?set2/update_plugin">デザインモジュールの再インストール</a></li>
 	</ul>
+
+	<br>
+	<form action="<@v.myself>?<@v.skeleton>" method="POST">
+	<input type="hidden" name="action" value="<@v.skel_dir>reinstall_modules">
+	<input type="hidden" name="csrf_check_key" value="<@CSRF_check_key>">
+	<input type=submit name="submit" value="デザインモジュールの再インストール"><br>
+	</form>
 
 </div>
 </article>
 
-
-	
-	
-	
-	
