@@ -11,5 +11,4 @@
 <$v.no_robots=1>
 <$delete(Query.n)>
 <$v.query = ''>
-<$v.system_mode()>
 <$jump( v.select_default_skeleton('') )>
