@@ -1,10 +1,28 @@
-<@20>
+<@6>
 
+<@> システムモード
 <$v.system_mode("デザインの初期化")>
 
+<!--========================================================================-->
 <@> 階層ツリー、初期処理
 <@call("<@v.skel_dir>_dir_tree")>
 
-<@> エラー表示
-<@call('_sub/error_message', 'スマホ表示ではこの機能は動作しません。')>
+<!--========================================================================-->
+<article class="system setting">
+<h2><@v.title></h2>
+<div class="body">
+	<form id="form" action="<@v.myself>?<@v.skeleton>" method="POST">
+	<input type="hidden" name="action" value="<@v.skeleton>">
+	<input type="hidden" name="csrf_check_key" value="<@CSRF_check_key>">
 
+	<ul class="none">
+	<li><input type="checkbox" name="all" value="1"><label>モジュール個別の設定もすべてリセットする</label></li>
+	<li><input type="checkbox" name="load_design" value="1"><label>リセット後にデフォルトデザインをロードする</label></li>
+	</ul>
+
+	<input type=submit name="submit" id="reset-submit" value="リセットする">
+	&nbsp;<input type="checkbox" name="reset_check" class="js-enable" data-target="#reset-submit"><label>確認</label>
+
+	</form>
+</div>
+</article>
