@@ -184,10 +184,11 @@ h1 img, h1 a img {
 	color:			#fff;		/* $c=fixddfont */
 }
 /* 矢印の色 */
-.dropdown-menu li ul li ul:before {
+.dropdown-menu li ul li ul:before,
+.dropdown-menu.sp li ul:before {
 	border-left-color:	#338;		/* $c=ddarrow = link/2 */
 }
-.dropdown-menu li:last-child ul li ul:before {
+.dropdown-menu:not(.sp) li:last-child:not(:first-child) ul li ul:before {
 	border-left-color:	transparent;
 	border-right-color:	#338;		/* $c=ddarrow */
 }
