@@ -3,21 +3,28 @@
 *Ver3.0RC1 : 2015/xx/xx
 
 -[bf:フッターの出力位置を変更しました]。
+-ドロップダウンメニューがヘッダにあるときスマホにもメニュー出力するようにしました。
 -FrontPage（固定トップページ）の時、記事タイトルをヘッダ出力しないように変更しました。
 -システムモード非対応テーマを管理画面で使用しようとする時、警告を表示するようにした。
 -表示パスワード機能やメンテナンスモードでの画面に、適切なHTTPステータスコードを設定した。
 -スマホ判別に、BlackBerry と Windows Phone を加えました。
 -コメント表示数の設定項目がなかったので修正。
 -FrontPageのタイトル設定機能を追加。
+-テーマを書きやすくするため、HTMLの出力構造を微修正しました。
+-【markdown】自動リンクをonにした場合、自動リンクするように変更しました。
+-【parser】見出し記法で、アンカーが存在しないときは{{<span class="sanchor">}}を出力しないようにしました。((テーマのCSS書いてて邪魔でしょうがなかった（苦笑）))
 -【design】全体の背景画像を設定できるように変更。
 -【design】ヘッダ用の「ブログの説明」プラグインを追加。
+-【design】ブログ情報で参照するRSSアイコンを作り直しました。またRSSにリンクするよう変更しました。
 -【記法】HTML5準拠のためtable記法のsummary指定を無効にしました。
 -【fix】ヘッダ部のmargin/padding設定が有効ではなかった。
--【fix】コンテンツリスト等多重配置可能なモジュールがあったとき、プラグイン再インストールでエラーが起きることがある。
+-【fix】ヘッダのタイトル文字位置がブログ表示時とデザイン編集時で異なる。
+-【fix】コンテンツリスト（ドロップダウンメニュー）で1段目の項目が1つしかない時、メニューを左に開いてしまう不具合を修正。
+-【fix】コンテンツリスト等の多重配置可能なモジュールがあったとき、プラグイン再インストールでエラーが起きることがある。
+-【fix】スマホからデザインモジュールの再インストールを行うとヘッダのHTMLが壊れる。
 -【fix】des_system-info のコメントの文字コードが間違っていた。
 -【fix】印刷用表示で FrontPage 機能が動作していなかった。
 -【fix】印刷用テーマ satsuki2/_print においてデザイン編集の設定を解除していなかった。
--【fix】ヘッダのタイトル文字位置がブログ表示時とデザイン編集時で異なる。
 -【fix】Version1からデータ移行時に、サムネイルディレクトリがうまく移行されない不具合を修正。
 -他
 
